--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-cayman
 
+name: Webpage of Marco David
 title: Marco David
 subtitle: Physics Student at Jacobs University Bremen.
