--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ theme: jekyll-theme-cayman
 name: Webpage of Marco David
 title: Marco David
 subtitle: Physics Student at Jacobs University Bremen.
+description: Text
